# mlops-platform

./: .gitignore  DEPLOY_RUNBOOK.md  Dockerfile  LICENSE  MLOps_Proje_Raporu.docx  MLOps_Proje_Sunumu.pptx  README.md  Sunum_Konusma_Metni.docx  local_run.py  main.py  models.py  pyproject.toml  requirements.txt  ruff.toml  run_local_demo.bat
.github/workflows/: ci.yaml
argocd/: ml-prediction-app.yaml
docs/: generate_doc.py  qwen3-35b-devreye-alim.docx  qwen3-35b-devreye-alim.html
infrastructure/: API  ML  MONITORING  ci-cd
k8s/: ingress-ml-prediction.yaml  ml-prediction-deployment.yaml  ml-prediction-servicemonitor.yaml  postgres.yaml
kubernetes_notes/: 01_kubectl_basics.md  02_create_a_deployment.md  kubernetes.pptx
routers/advertising/: advertising_ep.py
routers/iris/: iris_ep.py
routers/llm/: llm_ep.py
saved_models/: 02.iris_label_encoder.pkl  03.randomforest_with_advertising.pkl
