[project]
name = "13b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]==0.136.1",
    "joblib==1.4.2",
    "langchain>=1.3.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.4",
    "pandas==2.2.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "scikit-learn==1.5.2",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]==0.46.0",
]
